[package]
name = "guessing_game_sbrytiuk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple guessing game"
homepage = "https://github.com/645383/guessing_game"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
